<resources>
    <string name="app_name">Virtual Store</string>
    <string name="default_web_client_id">999581768586-phbjhbbq867fe4jcnjru9qmc3fhdmlg5.apps.googleusercontent.com</string>
    <string name="mi_google_maps_api_key">AIzaSyB82JMncYJ-8I4gFSTXuzOoFXxHEqScGnU</string>
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mi_tienda_v">Mi Tienda</string>
    <string name="op_categorias_v">Categorias</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrar_sesion_v">Cerrar Sesión</string>
    <string name="op_inicio_c">Inicio</string>
    <string name="op_mi_perfil_c">Mi Perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar Sesión</string>
    <string name="op_tienda_c">Tienda</string>
    <string name="op_mis_ordenes_c">Mis Ordenes</string>
    <string name="op_favoritos_c">Favoritos</string>
    <string name="op_carrito_c">Carrito</string>
    <string name="op_mis_productos_v">Mis Productos</string>
    <string name="op_mis_ordenes_v">Ordenes</string>
    <string name="txt_bienvenida">Bienvenido</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="txtRegistroV">Registro de Vendedor</string>
    <string name="etNombre">Nombres completos</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etConfirmarPassword">Confirmar Password</string>
    <string name="btnRegistrarV">Registrarme</string>
    <string name="txtLoginV">Login de vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">No tiene una cuenta?</string>
    <string name="tvRegistroV">Registrarme</string>
    <string name="txtMiPerfilC">Mi Perfil</string>
    <string name="txtMisOrdenesC">Mis Ordenes</string>
    <string name="txtTiendaC">Tienda</string>
    <string name="btnActualizarPassword">Cambiar contraseña</string>
    <string name="txtActualizarPass">Actualizar contraseña</string>
    <string name="txtInstruccionesP">Su nueva contraseña debe de ser diferente a la actual</string>
    <string name="etPasswordActual">Contraseña actual</string>
    <string name="etPasswordNueva">contraseña nueva</string>
    <string name="etPasswordNuevaR">Confirme la nueva contraseña</string>
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombreC">Nombres completos</string>
    <string name="btnRegistrarC">Registrarme</string>
    <string name="tvRecuperarPassword">Recuperar la contraseña</string>
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="txtRegistrarC">Registrarme</string>
    <string name="txtRecuperarPassword">Recuperar la contraseña</string>
    <string name="txtInstrucciones">Ingrese su correo electronico para enviar las instrucciones de recuperacion</string>
    <string name="btnEnviarInstrucciones">Enviar</string>
    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>
    <string name="usuarioLinea">Usuario en linea</string>
    <string name="cerrarSesion">Has cerrado la sesion</string>
    <string name="cargando">Cargando...</string>
    <string name="agregando">Agregando</string>
    <string name="add_Category">Se agrego la categoria con exito</string>
    <string name="seleccionar_categoria">Seleccione una categoria</string>
    <string name="cancel">Accion cancelada</string>
    <string name="imgSelect">Seleccione una imagen</string>
    <string name="subiendoIMG">Subiendo imagen</string>
    <string name="item_delete_nombre_c_v">Eliminando la categoria</string>
    <string name="item_deleted_category">categoria eliminada</string>
    <string name="img_deleted_category">imagen eliminada</string>
    <string name="item_n_delete_nombre_c_v">No se elimino la categoria</string>
    <string name="item_delete_nombre_c_c">Estas seguro de eliminar esta categoria?</string>
    <string name="producto_agregado">Producto agregado</string>
    <string name="app_loading">Cargando...</string>
    <string name="welcome">Bienvenido(a)</string>
    <string name="save_info">Guardando Informacion...</string>
    <string name="cancel_action">Se ha cancelado la accion</string>
    <string name="push_code">Enviando el codigo</string>
    <string name="reenviar_codigo">Reenviando el codigo...</string>
    <string name="verificando_codigo">Verificando el codigo...</string>
    <string name="put_cantidad">Cantidad actualizada</string>
    <string name="name_null">No se ha agregado un nombre</string>
    <string name="description_null">No se ha agregado una descripcion</string>
    <string name="categoria_null">No se ha agregado una categoria</string>
    <string name="precio_null">No se ha agregado un precio</string>
    <string name="nota_desc_null">No se ha agregado la nota de descuento</string>
    <string name="porcentaje_null">No se ha agregado un porcentaje</string>
    <string name="img_null">Seleccione una imagen</string>
    <string name="descuento_null">Ingrese el precio con descuento</string>
    <string name="invalid_email">email invalido</string>
    <string name="null_email">El email no ha sido agregado</string>
    <string name="null_password">El password no ha sido agregado</string>
    <string name="error_login">Fallo al iniciar sesion</string>
    <string name="null_number_hone">El numero de telefono no ha sido agregado</string>
    <string name="null_code_phone">Seleccione el numero de su pais</string>
    <string name="error_reenviar">Lo sentimos no se puede reenviar el codigo</string>
    <string name="null_code">Ingrese el codigo</string>
    <string name="min_length_code">El codigo debe de tener almenos 6 caracteres</string>
    <string name="error">Lo sentimos ha habido un error debido a </string>
    <string name="guardando">Guardando...</string>
    <string name="fav">Producto agregado a favoritos</string>
    <string name="no_fav">Producto eliminado de favoritos</string>
    <string name="txtAgregarProducto">Agregar Productos</string>
    <string name="etNombresP">Nombre del producto</string>
    <string name="etDescripcion">Descripción</string>
    <string name="etCategoria">Categoría</string>
    <string name="etPrecio">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="etPorcentajedescuentoP">Ingrese el porcentaje. Ejm. 10, 20, 40</string>
    <string name="etPrecioConDescuento"></string>
    <string name="etPrecioConDescuentoPTXT">Precio con descuento apl.</string>
    <string name="etNotaDescuento">Ejm: 10% Desc.</string>
    <string name="btnAgregarProducto">Agregar producto</string>
    <string name="btnCalcularPrecioDesc">Calcular</string>
    <string name="inCategoria">Ingrese Categoria</string>
    <string name="btnAgregarCat">Agregar Categoria</string>
    <string name="item_nombre_c_v">Nombre de categoria</string>
    <string name="item_nombre_c_c">Nombre de categoria</string>
    <string name="item_ver_productos">Ver productos</string>
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_nota_p">50%</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>
    <string name="txtProductoCat">Categoria del producto</string>
    <string name="item_agregar_carrito_p">Agregar al carrito</string>
    <string name="etBuscarProducto">Buscar producto</string>
    <string name="clear_camp">Campo limpiado</string>
    <string name="null_camp">Campo vacio</string>
    <string name="txtLoginTelC">Login con telefono</string>
    <string name="etTelefonoC">Telefono</string>
    <string name="btnEnviarCOdigo">Enviar codigo</string>
    <string name="etCodVer">Verificar de codigo</string>
    <string name="btnVerificarCod">Verificar codigo</string>
    <string name="tvReenviarCod">No te llego el codigo?. <b>Reenviar</b></string>
    <string name="txtDetalleProducto">Detalle del producto</string>
    <string name="txtDetalleOrden">Detalle de la orden</string>
    <string name="nombrePD">Nombre del producto</string>
    <string name="descripcionPD">Descripcion del producto</string>
    <string name="precioPD">00</string>
    <string name="precioDescPD">00</string>
    <string name="notaDescPD">50% OFF</string>
    <string name="descripcionPDTXT">Informacion general</string>
    <string name="imagenContadorTv">1/5</string>
    <string name="nombrePCar">Nombre del producto</string>
    <string name="descripcionPCar">Descripcion</string>
    <string name="notaDescPCar">10% OFF</string>
    <string name="precioOriginalPCar">00</string>
    <string name="precioDescPCar">00</string>
    <string name="cantidadPCar">1</string>
    <string name="precioFinalPCar">999</string>
    <string name="btnAgregarPCar">Agregar al carrito</string>
    <string name="add_toCar">Se agrego el producto al carrito</string>
    <string name="sumaProductos">Suma de productos</string>
    <string name="cerrarZoom">Cerrar</string>
    <string name="editar_producto">Editar producto</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="producto_actualizado">Producto actualizado</string>
    <string name="delete_img">Imagen eliminada\n</string>
    <string name="delete_p">Producto eliminado</string>
    <string name="delete_confirm">Seguro de eliminar este registro?</string>
    <string name="delete">Eliminar</string>
    <string name="bienvenidaTXT">Bienvenido(a)</string>
    <string name="direccionTXT">Mi direccion</string>
    <string name="txtCategorias">Nuestras categorias</string>
    <string name="txtMiPerfil">Mi perfil</string>
    <string name="nombresCPerfil">Nombres completos:</string>
    <string name="emailCPerfil">Email:</string>
    <string name="telefonoCPerfil">Telefono:</string>
    <string name="dniCPerfil">Dni:</string>
    <string name="fechaRegistroCPerfil">Fecha de registro:</string>
    <string name="proveedorCPerfil">Proveedor:</string>
    <string name="btnGuardarInfoC">Guardar</string>
    <string name="pov_email">La cuenta fue creada por medio de su email</string>
    <string name="prov_google">Su cuenta fue creada por medio de Google</string>
    <string name="prov_telefono">Su cuenta fue creada por medio de su telefono</string>
    <string name="updateIMG">Imagen de perfil actualizada</string>
    <string name="update_info">Informacion actualizada</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="mtxtSeleccionarUbicacion">Seleccione una ubicacion</string>
    <string name="txtConfirm">Confirmar</string>
    <string name="null_position">La ubicacion se encuentra desactivada, para acceder a esta funcion activela\n</string>
    <string name="permiso_denegado">Permiso denegado\n</string>
    <string name="instructions_sent">Las instrucciones fueron enviadas a su correo electronico</string>
    <string name="null_new_password">Es necesario poner el password actual</string>
    <string name="null_new_passwordR">Debe de asignar una nueva password\n</string>
    <string name="passwords_not_match">La nueva password y su confimacion no coinciden</string>
    <string name="updating_password">Cambiando la password...</string>
    <string name="password_updated">Se ha actualizado la password</string>
    <string name="btnCrearorden">Confirmar orden</string>
    <string name="carrito_vacio">No hay productos en el carrito :(</string>
    <string name="order_created">Orden creada</string>
    <string name="idOrdenItem">Id de la orden</string>
    <string name="fechaOrdenItem">00/00/00</string>
    <string name="estadoOrdenItem">Estado de la orden</string>
    <string name="costoOrdenItem">00</string>
    <string name="estado_orden_recibida">Solicitud recibida</string>
    <string name="estado_orden_preparacion">En preparacion</string>
    <string name="estado_orden_entegado">Entregado</string>
</resources>