<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single"
        >
        <!-- -->
        <item
            android:id="@+id/op_inicio_v"
            android:title="@string/op_inicio_v"
            android:icon="@drawable/icon_inicio"
            />
        <!--Categorias -->
        <item
            android:id="@+id/op_categorias_v"
            android:title="@string/op_categorias_v"
            android:icon="@drawable/icon_categorias"
            />
        <item
            android:id="@+id/op_mi_tienda_v"
            android:title="@string/op_mi_tienda_v"
            android:icon="@drawable/icon_store"
            />
        <item
            android:id="@+id/op_resenia_v"
            android:title="@string/op_resenia_v"
            android:icon="@drawable/icon_start"
            />
    </group>

    <item
        android:id="@+id/op_cerrar_sesion_v"
        android:title="@string/op_cerrar_sesion_v"
        android:icon="@drawable/icon_exit"
        />

</menu>