<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_inicio_c"
            android:title="@string/op_inicio_c"
            android:icon="@drawable/icon_inicio"
            />

        <item
            android:id="@+id/nav_mi_perfil_c"
            android:title="@string/op_mi_perfil_c"
            android:icon="@drawable/icon_account"
            />

    </group>

    <item
        android:id="@+id/nav_cerrar_sesion_c"
        android:title="@string/op_cerrar_sesion_c"
        android:icon="@drawable/icon_exit"
        />

</menu>