<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleProducto.DetalleProductoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagenVP"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />
            <!-- Nombre -->
            <TextView
                android:id="@+id/nombrePD"
                android:text="@string/nombrePD"
                android:layout_below="@+id/imagenVP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!-- Descripcion -->
            <TextView
                android:id="@+id/descripcionPD"
                android:text="@string/descripcionPD"
                android:layout_below="@+id/nombrePD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!-- Precio -->
            <TextView
                android:id="@+id/precioPD"
                android:text="@string/precioPD"
                android:layout_below="@+id/descripcionPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!-- Descuento -->
            <TextView
                android:id="@+id/precioDescPD"
                android:text="@string/precioDescPD"
                android:layout_below="@+id/precioPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!-- Nota descuento -->
            <TextView
                android:id="@+id/notaDescPD"
                android:text="@string/notaDescPD"
                android:layout_below="@+id/precioDescPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_agregar_carrito_p"
                android:text="@string/item_agregar_carrito_p"
                app:cornerRadius="8dp"
                android:layout_below="@+id/notaDescPD"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>