<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <com.google.android.material.imageview.ShapeableImageView
           android:id="@+id/imagenPCar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/carrito_de_compras"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />
        <!-- Nombre -->
        <TextView
            android:id="@+id/nombrePCar"
            android:text="@string/nombrePCar"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imagenPCar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <!-- Descripcion -->
        <TextView
            android:id="@+id/descripcionPCar"
            android:text="@string/descripcionPCar"
            android:layout_below="@+id/nombrePCar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            tools:text="@tools:sample/lorem[25]"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <!-- Descuento -->
        <TextView
            android:id="@+id/notaDescPCar"
            android:text="@string/notaDescPCar"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:background="@drawable/fondo_verde"
            android:textColor="@color/verde_claro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <!-- Precio Original -->
        <TextView
            android:id="@+id/precioOriginalPCar"
            android:text="@string/precioOriginalPCar"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Precio con desc -->
        <TextView
            android:id="@+id/precioDescPCar"
            android:text="@string/precioDescPCar"
            android:padding="10dp"
            android:layout_toEndOf="@+id/precioOriginalPCar"
            android:textAlignment="textStart"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Precio firnal -->
        <TextView
            android:id="@+id/precioFinalPCar"
            android:text="@string/precioFinalPCar"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        >
        <!-- Disminuir cantidad -->
        <ImageButton
            android:id="@+id/btnDisminuir"
            android:src="@drawable/icon_rest"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Cantidad actual -->
        <TextView
            android:id="@+id/cantidadPCar"
            android:text="@string/cantidadPCar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Aumentar cantidad -->
        <ImageButton
            android:id="@+id/btnAumentar"
            android:src="@drawable/icon_add"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgregarPCar"
        android:text="@string/btnAgregarPCar"
        android:textAllCaps="true"
        android:padding="5dp"
        app:cornerRadius="0dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>