<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendedor.LoginVendedorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <TextView
            android:text="@string/txtLoginV"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/login_vendedor"
            />
        <!-- Input email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Input password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Buttom of Login -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:text="@string/btnLoginV"
            android:textAllCaps="true"
            app:cornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!-- Button of Register -->
        <TextView
            android:text="@string/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!-- Button of Register -->
        <TextView
            android:id="@+id/tvRegistroV"
            android:text="@string/tvRegistroV"
            android:textColor="@color/verde_oscuro"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>